# qc-core

./: .gitignore  CMakeLists.txt  README.md  bits.hpp  color.hpp  core-ext.hpp  core-func.hpp  core.hpp  cycle-array.hpp  heap-array.hpp  log.hpp  math.hpp  matrix-ext.hpp  matrix-func.hpp  matrix.hpp  memory.hpp  quaternion-ext.hpp  quaternion-func.hpp  quaternion.hpp  random.hpp  span-ext.hpp  span-func.hpp  span.hpp  stride-iterator.hpp  time.hpp  utils.hpp  vector-ext.hpp  vector-func.hpp  vector.hpp
QCU/: Bits.hpp  Color.hpp  Core.hpp  CoreFunc.hpp  Depot.hpp  DirectMap.hpp  Hoard.hpp  Log.cpp  Log.hpp  Math.hpp  Matrix.hpp  MatrixFunc.hpp  Quaternion.hpp  QuaternionFunc.hpp  Time.hpp  Utils.hpp  Vector.hpp  VectorFunc.hpp  dllmain.cpp
QCUTesting/: BitsTest.cpp  CoreTest.cpp  DirectMapTest.cpp  LogTest.cpp  Main.cpp  MathTest.cpp  MatrixTest.cpp  QCUTest.hpp  QuaternionTest.cpp  TimeTest.cpp  UtilsTest.cpp  VectorTest.cpp
QCore/: Bits.hpp  Bits.tpp  Color.hpp  Core.hpp  Core.tpp  CoreFunc.hpp  CoreFunc.tpp  Depot.hpp  DirectMap.hpp  Hoard.hpp  Log.hpp  Math.hpp  Matrix.hpp  Matrix.tpp  MatrixFunc.hpp  MatrixFunc.tpp  MatrixJson.hpp  Memory.hpp  Quaternion.hpp  Quaternion.tpp  QuaternionFunc.hpp  QuaternionFunc.tpp  QuaternionJson.hpp  Random.hpp  Span.hpp  SpanFunc.hpp  Time.hpp  Utils.hpp  Vector.hpp  Vector.tpp  VectorFunc.hpp  VectorFunc.tpp  VectorJson.hpp  bits.hpp  core-func.hpp  math.hpp  quaternion.hpp  span-func.hpp  span.hpp  vector-func.hpp  (+1 more)
QCoreTest/: BitsTest.cpp  CoreTest.cpp  DirectMapTest.cpp  JsonTest.cpp  LogTest.cpp  Main.cpp  MathTest.cpp  MatrixTest.cpp  QCoreTest.hpp  QuaternionTest.cpp  SpanTest.cpp  TimeTest.cpp  UtilsTest.cpp  VectorTest.cpp  bits-test.cpp  core-test.cpp  log-test.cpp  math-test.cpp  matrix-test.cpp  quaternion-test.cpp  span-test.cpp  test-logcpp  test-time.cpp  test-utils.cpp  time-test.cpp  utils-test.cpp  vector-test.cpp
QMU/: Core.hpp  Log.cpp  Log.hpp  Math.hpp  Matrix.hpp  QClock.h  QLog.hpp  QMU.hpp  QMath.hpp  QMatrix.hpp  QQuaternion.hpp  QTime.hpp  QUtils.hpp  QVector.hpp  Quaternion.hpp  Time.hpp  Utils.hpp  Vector.hpp  dllmain.cpp
QMUSolution/QHashTest/: Main.cpp
QMUSolution/QMU/: QArray.hpp  QHash.hpp  QLog.cpp  QLog.hpp  QMU.h  QMU.hpp  QMap.hpp  QMath.hpp  QMatrix.hpp  QQuaternion.hpp  QUtils.hpp  QVector.hpp  Random.hpp  dllmain.cpp  stdafx.cpp
QMUSolution/QMUTesting/: Main.cpp
QMUTesting/: CoreTest.cpp  LogTest.cpp  Main.cpp  MathTest.cpp  MatrixTest.cpp  QMUTest.cpp  QMUTest.hpp  QuaternionTest.cpp  TimeTest.cpp  UtilsTest.cpp  VectorTest.cpp
include/qc-core/: arena.hpp  avl-tree.hpp  bank.hpp  bubble-tracker.hpp  color.hpp  core-ext.hpp  core.hpp  cycle-array.hpp  deque.hpp  enum-iterator.hpp  enum-utils.hpp  fixed-pool.hpp  geometric-mono-allocator.hpp  geometric-object-pool.hpp  heap-array.hpp  kd-tree.hpp  lock.hpp  math.hpp  matrix-ext.hpp  matrix.hpp  memory-bubble-tracker.hpp  memory.hpp  object-slab.hpp  paging.hpp  pool-common.hpp  pool.hpp  quaternion-ext.hpp  quaternion.hpp  random.hpp  record-allocator.hpp  ring-deque.hpp  sea.hpp  semi-stable-deque.hpp  slab.hpp  smart-pointer.hpp  span-ext.hpp  span.hpp  stable-lot.hpp  stride-iterator.hpp  time.hpp  (+4 more)
qc-core/: CMakeLists.txt
qc-core-cpu/: CMakeLists.txt
qc-core-cpu/include/qc-core/: cpu.hpp
qc-core-cpu/source/: cpu.cpp
qc-core-platform/: CMakeLists.txt
qc-core-platform/include/qc-core/: binary-file-stream.hpp  cpu.hpp  paging.hpp  serializer.hpp
qc-core-platform/include/qc-core/serializers/: std-map-serializer.hpp
qc-core-platform/source/: binary-file-stream.cpp  cpu.cpp  paging.cpp
qc-core/include/qc-core/: algorithm.hpp  arena.hpp  array.hpp  avl-tree.hpp  bank.hpp  binary-file-stream.hpp  bubble-tracker.hpp  bump-allocator.hpp  color.hpp  core-ext.hpp  core.hpp  e-box.hpp  enum-utils.hpp  heap-array.hpp  kd-tree.hpp  list.hpp  lock.hpp  lot.hpp  math.hpp  matrix-ext.hpp  matrix.hpp  paging.hpp  pool.hpp  quaternion-ext.hpp  quaternion.hpp  random.hpp  record-allocator.hpp  ring-deque.hpp  semi-stable-deque.hpp  serializer.hpp  smart-pointer.hpp  span-ext.hpp  span.hpp  stride-iterator.hpp  time.hpp  unique-ordered-vector.hpp  utils.hpp  vector-ext.hpp  vector.hpp  version.hpp  (+4 more)
qc-core/include/qc-core/serializers/: list-serializer.hpp  std-string-serializer.hpp
qc-core/source/: binary-file-stream.cpp  paging.cpp
source/: paging.cpp
test/: CMakeLists.txt  pch.hpp  test-algorithm.cpp  test-arena.cpp  test-array.cpp  test-avl-tree.cpp  test-bank.cpp  test-binary-file-stream.cpp  test-bits.cpp  test-bubble-tracker.cpp  test-color.cpp  test-core.cpp  test-cpu.cpp  test-deque.cpp  test-e-box.cpp  test-enum-iterator.cpp  test-enum-utils.cpp  test-fixed-pool.cpp  test-geometric-object-pool.cpp  test-kd-tree.cpp  test-list.cpp  test-lock.cpp  test-log.cpp  test-lot.cpp  test-math.cpp  test-matrix.cpp  test-memory-bubble-tracker.cpp  test-memory.cpp  test-object-slab.cpp  test-paging.cpp  test-pool.cpp  test-quaternion.cpp  test-random.cpp  test-result.cpp  test-ring-deque.cpp  test-sea.cpp  test-semi-stable-deque.cpp  test-serializer.cpp  test-slab.cpp  test-smart-pointer.cpp  (+9 more)
